sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:7: error: ';' expected but 'false' found.
			if (plusPetit(i,i+1)) == false){
                                                 ^AlgCocktailSort1:13: error: ';' expected but 'false' found.
			if (plusPetit(i,i+1)) == false){
                                                 ^